# ALMUAV

./: .gitignore  README.md
Mat_vs_UMat_test/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  DisplayImage.cpp~  Makefile  Mat_vs_UMat_test  Mat_vs_UMat_test.cbp  Mat_vs_UMat_test.cpp  cmake_install.cmake
V4L_CameraCapture/: CMakeLists.txt  V4L_CameraCapture.cpp
VideoRecorder/: CMakeCache.txt  CMakeLists.txt  VideoRecorder  VideoRecorder.cpp  VideoRecorder.py  cmake_install.cmake
opencvHSVtool/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  opencvHSVtool  opencvHSVtool.cbp  opencvHSVtool.cpp  opencvHSVtool.cpp~
opencvLoadParameters/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CalibrationData.cpp  CalibrationData.hpp  Makefile  cmake_install.cmake  loadParameters  loadParameters.cpp  opencvLoadParameters.cbp
opencvLoadParameters/calibrationdata/: ost.txt  ost.yaml
red_led_detector/: CMakeLists.txt  main.cpp  red_led_detector.cpp  red_led_detector.h  red_led_detector_test_program
