cmake_minimum_required(VERSION 2.8)
project( opencvLoadParameters )
ADD_DEFINITIONS("-std=c++11")
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( loadParameters loadParameters.cpp CalibrationData.cpp)
target_link_libraries( loadParameters ${OpenCV_LIBS} )
